--- a/mouse color changer/index.html
+++ b/mouse color changer/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Color Changer</title>
 </head>
 
 <body>
